메인 50% 작업중

--- a/src/main/resources/static/css/main/main.css
+++ b/src/main/resources/static/css/main/main.css
@@ -64,6 +64,11 @@ b, strong {
     font-weight: bold;
 }
 
+*, *:before, *:after {
+    -webkit-box-sizing: inherit;
+    box-sizing: inherit;
+}
+
 .scroll-top-btn-wrapper.animate .scroll-top-icon svg {
     opacity: 0.5;
 }
@@ -172,13 +177,16 @@ b, strong {
 
 .main-first-wrapper{
     position: relative;
-    margin-top: 40px;
-    padding-bottom: 40px;
-    position: relative;
+    font-family: 'SF Pro Text', 'Helvetica Neue', 'Segoe UI', Arial, 'NotoSansKR', sans-serif;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: -0.015em;
+    font-weight: 400;
+    background: #FFF;
+    color: #3d3d3d;
 }
 
 .banner-swiper-container{
-    width: 766px;
     position: relative;
     overflow: hidden;
     margin-left: auto;
@@ -284,23 +292,528 @@ b, strong {
     fill: rgb(255, 255, 255);
 }
 
-@media (min-width: 1200px) {
-    .main-top-section{
-        max-width: 1160px;
+.main-first-list-title{
+    display: flex;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    align-items: center;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: -0.02em;
+    color: rgb(28, 28, 28);
+    font-weight: bold;
+    margin: 0px 0px 20px;
+    padding: 0px 16px;
+}
+
+.main-first-list-wrapper{
+    width: 100%
+}
+
+.main-first-list-layout{
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.main-first-list-wrapper .list-wrapper{
+    padding-bottom: 40px !important;
+}
+
+.main-first-list-layout .list-wrapper{
+    width: 25%;
+    padding: 0px 7px;
+}
+
+.volunteer-percentage-wrapper{
+    width: 100%;
+}
+
+.volunteer-percentage-wrapper .volunteer-link-wrapper{
+    display: block;
+}
+
+.volunteer-link-wrapper{
+    position: relative;
+}
+
+.volunteer-percentage-wrapper .volunteer-image-wrapper{
+    position: relative;
+    overflow: hidden;
+    transition: all 0.2s ease 0s;
+}
+
+.volunteer-percentage-wrapper .volunteer-image-wrapper a{
+    display: block;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background: url(https://tumblbug-pci.imgix.net/11ea5b920c65d5f3d65d29a1b1583cd2e03f16e6/7e8526e5354e0c0bcc41f19ea3532d3953153f46/b54dc2f6adc3d2efe36e579b1105000924deb9ca/3cb39544-e40c-427d-859c-257455ee4ea8.jpeg?auto=format%2Ccompress&fit=crop&h=288&lossless=true&w=384&s=962bd7e25cdcc5817e3fc32e0affe115) center center / cover no-repeat;
+    z-index: 8;
+    transition: all 0.4s ease 0s;
+}
+
+.volunteer-percentage-wrapper .volunteer-image-wrapper a::before{
+    display: block;
+    content: "";
+    position: absolute;
+    inset: 0px;
+    z-index: 1;
+    box-sizing: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.04);
+}
+
+.like-button-wrapper{
+    position: absolute;
+    z-index: 9;
+    bottom: 10px;
+    right: 11px;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+}
+
+.main-first-list-wrapper button{
+    outline: 0;
+}
+
+.like-button{
+    border: 0px;
+    padding: 0px;
+    overflow: hidden;
+    background: transparent;
+    position: relative;
+    z-index: 2;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+
+.like-button::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background: url(https://tumblbug.com/wpa/2d61acb1947426fe50825e64c51e61db.png) 0px 0px / cover no-repeat;
+}
+
+.volunteer-percentage-wrapper .volunteer-image-wrapper::after {
+    content: "";
+    padding: 0px 0px 86%;
+    display: block;
+}
+
+.volunteer-percentage-wrapper dl{
+    margin: 0px;
+    padding: 12px 0px 0px;
+    color: rgb(61, 61, 61);
+    min-height: 74px;
+}
+
+.volunteer-percentage-wrapper dl dd.volunteer-sub-info{
+    width: 100%;
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: normal;
+    white-space: nowrap;
+    padding: 0px 0px 1px;
+    font-size: 11px;
+    letter-spacing: -0.005em;
+    line-height: 16px;
+    color: rgb(109, 109, 109);
+}
+
+.volunteer-percentage-wrapper dl dd.volunteer-sub-info span:last-of-type:before{
+    content: "|";
+    display: inline-block;
+    margin: 0px 6px;
+    position: relative;
+    z-index: 1;
+    top: -1px;
+    font-size: 7px;
+    color: rgb(208, 208, 208);
+}
+
+.volunteer-percentage-wrapper dl dt{
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    max-height: 48px;
+    word-break: keep-all;
+    font-size: 14px;
+    letter-spacing: -0.015em;
+    line-height: 20px;
+    font-weight: 700;
+}
+
+.volunteer-percentage-wrapper dl dd{
+    margin: 0px;
+    padding: 0px;
+}
+
+.volunteer-percentage-wrapper dl dt a{
+    color: rgb(61, 61, 61);
+}
+
+.volunteer-percentage-wrapper dl dd.volunteer-sub-info a{
+    color: rgb(109, 109, 109);
+}
+
+.main-popular-title-wrapper{
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    word-break: keep-all;
+    position: relative;
+    margin: 0px 0px 16px;
+}
+
+.main-popular-title-wrapper span {
+    display: block;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: normal;
+    white-space: nowrap;
+}
+
+.main-popular-list-wrapper{
+    width: 100%;
+}
+
+.view-total-funding-button{
+    display: flex;
+    width: 204px;
+    height: 44px;
+    font-size: 13px;
+    line-height: 20px;
+    letter-spacing: -0.015em;
+    border: 1px solid rgb(230, 230, 230);
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 8px;
+    text-align: center;
+    color: rgb(61, 61, 61);
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    border-radius: 22px;
+    margin: 30px auto 0px;
+}
+
+.popular-list-title{
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    align-items: center;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: -0.02em;
+    color: rgb(28, 28, 28);
+    font-weight: bold;
+    padding: 0px 16px;
+    margin: 0px;
+}
+
+.popular-list-title a, .popular-list-title a:hover {
+    color: rgb(13, 13, 13);
+}
+
+.popular-list-time{
+    display: block;
+    font-weight: 400;
+    color: rgb(109, 109, 109);
+    margin: 2px 0px 0px;
+    font-size: 12px !important;
+    line-height: 20px !important;
+    font-family: NotoSansKR, "SF Pro Text", "Segoe UI", "Helvetica Neue", Arial, sans-serif !important;
+}
+
+.total-funding-link{
+    display: flex;
+    font-size: 13px;
+    line-height: 20px;
+    letter-spacing: -0.015em;
+    font-weight: 400;
+    position: absolute;
+    top: 0px;
+    right: 17px;
+    color: rgb(109, 109, 109) !important;
+}
+
+.list-layout{
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.main-popular-list-layout{
+    display: flex;
+    flex-flow: column wrap;
+    width: 100%;
+    max-height: 432px;
+    overflow: auto hidden;
+}
+
+.rank-layout-top{
+    display: flex;
+    flex: 0 0 auto;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    width: 46px;
+    font-weight: 700;
+    color: rgba(240, 80, 62, 0.9);
+    font-size: 16px !important;
+    line-height: 24px !important;
+    font-family: NotoSansKR, "SF Pro Text", "Segoe UI", "Helvetica Neue", Arial, sans-serif !important;
+}
+
+.rank-layout{
+    display: flex;
+    flex: 0 0 auto;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    width: 46px;
+    font-weight: 700;
+    color: rgba(0, 0, 0, 0.8);
+    font-size: 16px !important;
+    line-height: 24px !important;
+    font-family: NotoSansKR, "SF Pro Text", "Segoe UI", "Helvetica Neue", Arial, sans-serif !important;
+}
+
+.volunteer-percentage-wrapper .popular-percentage-layout {
+    display: block;
+}
+
+.main-popular-list-layout .popular-percentage-layout{
+    display: flex;
+    align-items: flex-start;
+}
+
+.popular-percentage-layout{
+    position: relative;
+}
+
+.main-popular-list-layout .image-wrapper{
+    width: 96px;
+    flex: 0 0 auto;
+}
+
+.volunteer-percentage-wrapper .image-wrapper {
+    position: relative;
+    overflow: hidden;
+    transition: all 0.2s ease 0s;
+}
+
+.volunteer-percentage-wrapper .image-wrapper a{
+    display: block;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background: url(https://tumblbug-pci.imgix.net/11ea5b920c65d5f3d65d29a1b1583cd2e03f16e6/7e8526e5354e0c0bcc41f19ea3532d3953153f46/b54dc2f6adc3d2efe36e579b1105000924deb9ca/3cb39544-e40c-427d-859c-257455ee4ea8.jpeg?auto=format%2Ccompress&fit=crop&h=288&lossless=true&w=384&s=962bd7e25cdcc5817e3fc32e0affe115) center center / cover no-repeat;
+    z-index: 8;
+    transition: all 0.4s ease 0s;
+}
+
+.volunteer-percentage-wrapper .image-wrapper a::before{
+    display: block;
+    content: "";
+    position: absolute;
+    inset: 0px;
+    z-index: 1;
+    box-sizing: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.04);
+}
+
+.main-popular-list-layout .info-wrapper{
+    flex: 0 1 auto;
+    width: calc(100% - 151px);
+}
+
+.main-popular-list-layout .list-wrapper {
+    display: flex;
+    min-width: 272px;
+    width: 80%;
+    height: 88px;
+    padding: 0px 0px 0px 16px;
+    margin: 10px 0px 0px !important;
+}
+
+.volunteer-percentage-wrapper dl{
+    margin: 0px;
+    padding: 12px 0px 0px;
+    color: rgb(61, 61, 61);
+    min-height: 74px;
+}
+
+.volunteer-percentage-wrapper .funding-status{
+    display: flex;
+    align-items: flex-end;
+    font-weight: bold;
+    padding-top: 2px;
+    font-size: 13px;
+    letter-spacing: -0.015em;
+    line-height: 28px;
+}
+
+.volunteer-percentage-wrapper .funding-status .percentage{
+    color: rgb(255, 87, 87);
+}
+
+.volunteer-percentage-wrapper .image-wrapper::after{
+    content: "";
+    padding: 0px 0px 86%;
+    display: block;
+}
+
+.main-popular-list-layout dl {
+    min-height: 55px;
+    padding: 0px;
+}
+
+.main-content-wrap{
+    margin: 40px auto;
+    max-width: 1080px;
+}
+
+.picture-data{
+    width: 100%;
+    cursor: pointer;
+}
+
+.picture-data img.m-img{
+    vertical-align: top;
+    width: 100%;
+    height: 100%;
+}
+
+.picture-data img {
+    vertical-align: top;
+    width: 100%;
+    height: 100%;
+}
+
+@media (min-width: 640px) {
+    .main-popular-list-layout .list-wrapper {
+        display: flex;
+        min-width: 272px;
+        width: 50%;
+        height: 88px;
+        padding: 0px 0px 0px 20px;
+        margin: 10px 0px 0px !important;
     }
 
-    .main-bottom-banner{
-        max-width: 1160px;
-        margin: 0px auto 98px;
+}
+
+@media (min-width: 768px) {
+    .main-banner-container{
+        display: flex;
+        margin: 0px auto 40px;    
     }
 
-    .main-first-section{
-        width: 766px;
-        margin: 0px 78px 0px 0px;
+    .main-first-wrapper{
+        padding: 0px 16px 44px;
     }
 
-    .swiper-slider{
-        width: 766px;
+    .swiper-controll-wrapper{
+        right: 30px;
+        bottom: 30px;    
+    }
+
+    .swiper-controll-wrapper{
+        right: 30px;
+        bottom: 30px;    
+    }
+    
+    .banner-count{
+        min-width: 40px;
+        padding: 1px 9px;
+    }
+
+    .move-arrow{
+        display: flex;
+        margin-left: 12px;    
+    }
+    
+    .main-first-list-title{
+        padding: 0px;
+        font-size: 20px;
+        line-height: 29px;
+        letter-spacing: -0.025em;    
+    }
+
+    .volunteer-percentage-wrapper dl dt{
+        max-height: initial;
+    }
+
+    .main-popular-title-wrapper{
+        margin-bottom: 20px;
+        padding: 0px 20px;    
+    }
+
+    .view-total-funding-button{
+        margin: 37px auto 0px;
+    }
+
+    .popular-list-title{
+        padding: 0px;
+        font-size: 20px;
+        line-height: 29px;
+        letter-spacing: -0.025em;
+    }
+
+    .main-popular-list-layout .list-wrapper {
+        width: 76.92%;
+        padding: 0px 12px;
+    }
+
+    .picture-data img.m-img{
+        display: none;
+    }
+
+    .picture-data img.pc-img{
+        display: none;
+    }
+}
+
+@media (min-width: 992px) {
+    .main-first-wrapper{
+        padding-bottom: 20px;
+    }
+
+    .main-first-list-wrapper{
+        padding: 0px;
+    }
+
+    .view-total-funding-button{
+        width: 233px;
+        margin-top: 20px;
+        font-size: 14px;
+        line-height: 24px;
+        letter-spacing: -0.015em;    
     }
 }
 
@@ -354,42 +867,127 @@ b, strong {
         padding: 0px;
         margin: 0px -6px;
     }
+
+    .main-first-list-title{
+        padding-left: 7px;
+    }
+
+    .main-first-list-layout .list-wrapper{
+        width: 180px;
+        padding: 0px 7px;
+    }
+
+    .like-button-wrapper{
+        bottom: 12px;
+        right: 12px;
+    }
+
+    /* .volunteer-percentage-wrapper dl{
+        padding: 14px 0px 0px;
+    } */
+
+    .volunteer-percentage-wrapper .volunteer-image-wrapper::after {
+        padding: 0px 0px 81%;
+    }
+
+    .volunteer-percentage-wrapper dl dd.volunteer-sub-info{
+        padding: 0px 0px 2px;
+    }
+
+    .volunteer-percentage-wrapper dl dd.volunteer-sub-info > span::before{
+        font-size: 8px;
+    }
+
+    .main-popular-title-wrapper{
+        padding: 0px;
+        margin-bottom: 22px;
+    }
+
+    .popular-list-title{
+        padding: 0px;
+    }
+
+    .total-funding-link{
+        font-size: 14px;
+        line-height: 24px;
+        letter-spacing: -0.015em;
+        right: 12px;
+    }
+
+    .main-popular-list-layout{
+        display: block;
+        width: 100%;
+        height: auto;
+        max-height: 100%;
+        overflow: hidden;
+    }
+
+    .rank-layout{
+        width: 43px;
+    }
+
+    .main-popular-list-layout .image-wrapper{
+        width: 102px;
+    }
+
+    .volunteer-percentage-wrapper .funding-status{
+        padding: 0px;
+    }
+
+    .volunteer-percentage-wrapper .image-wrapper::after{
+        padding: 0px 0px 81%;
+    }
+
+    .main-popular-list-layout .list-wrapper:first-child {
+        margin-top: 0px !important;
+    }
+
+    .main-popular-list-layout .list-wrapper {
+        display: flex;
+        width: 100%;
+        min-width: auto;
+        height: auto;
+        margin-top: 12px !important;
+        padding: 0px !important;
+    }
+
+    .main-popular-list-layout .list-wrapper {
+        width: 100%;
+        padding: 0px 7px;
+    }
 }
 
-@media (min-width: 992px) {
-    .main-first-wrapper{
-        padding-bottom: 20px;
-    }
-}
-
-@media (min-width: 768px) {
-    .main-banner-container{
-        display: flex;
-        margin: 0px auto 40px;    
+@media (min-width: 1200px) {
+    .main-top-section{
+        max-width: 1160px;
     }
 
-    .main-first-wrapper{
-        padding: 0px 16px 44px;
+    .main-bottom-banner{
+        max-width: 1160px;
+        margin: 0px auto 98px;
     }
 
-    .swiper-controll-wrapper{
-        right: 30px;
-        bottom: 30px;    
+    .main-first-section{
+        width: 766px;
+        margin: 0px 78px 0px 0px;
     }
 
-    .swiper-controll-wrapper{
-        right: 30px;
-        bottom: 30px;    
-    }
-    
-    .banner-count{
-        min-width: 40px;
-        padding: 1px 9px;
+    .swiper-slider{
+        width: 766px;
     }
 
-    .move-arrow{
-        display: flex;
-        margin-left: 12px;    
+    .main-popular-section{
+        max-width: 314px;
+        width: calc((100% - 766px) - 78px);
+        padding: 0px;
     }
-    
+
+    .main-popular-list-layout .image-wrapper{
+        width: 108px;
+    }
+
+    .main-content-wrap{
+        max-width: 1160px;
+        margin: 52px auto;
+    }
 }
