--- a/src/main/resources/templates/community/free-detail.html
+++ b/src/main/resources/templates/community/free-detail.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>심봉사 | 활동 후기 상세페이지</title>
+    <title>심봉사 | 자유게시판 상세페이지</title>
     <link rel="stylesheet" href="../../static/css/font/font.css">
-    <link rel="stylesheet" href="../../static/css/community/review-detail.css">
+    <link rel="stylesheet" href="../../static/css/community/free-detail.css">
     <link rel="stylesheet" href="../../static/css/main/header.css">
 </head>
 <body>
@@ -135,7 +135,7 @@
                         <div class="comment-box" style="display: none;">
                             <div class="comment-box-container">
                                 <div class="comment-box-wrapper">
-                                    <span class="comment-box-p">댓글을 작성하려면 로그인을 해주세요.</span>
+                                    <textarea placeholder="댓글을 작성하려면 로그인을 해주세요." class="comment-box-p"></textarea>
                                 </div>
                                 <div class="comment-Nologin">
                                     <button class="comment-Nologin-btn">로그인</button>
@@ -148,12 +148,11 @@
                                 <div class="comment-login">
                                     <div class="comment-login-profile">
                                         <span class="profile-span">
-                                            <img class="profile-img" style="margin: 0;" src="https://steadio.co/_next/image?url=https%3A%2F%2Fsteadio.imgix.net%2Fprofiles%2Fd7afcbbb-8376-4a2e-89a1-7d379ba76ea7%2FprofileImage%2F8220395f-c776-40bd-bced-f075a2315cdf.jpg%3Fauto%3Dformat%252Ccompress%26h%3D300%26lossless%3Dtrue%26w%3D300&w=1920&q=75">
+                                            <img class="profile-img" src="https://steadio.co/_next/image?url=https%3A%2F%2Fsteadio.imgix.net%2Fprofiles%2Fd7afcbbb-8376-4a2e-89a1-7d379ba76ea7%2FprofileImage%2F8220395f-c776-40bd-bced-f075a2315cdf.jpg%3Fauto%3Dformat%252Ccompress%26h%3D300%26lossless%3Dtrue%26w%3D300&w=1920&q=75">
                                         </span>
                                     </div>
                                 </div>
-                                <span class="comment-box-span">댓글을 작성해 주세요...</span>
-                                <button class="singUp">등록</button>
+                                <textarea placeholder="댓글을 작성해주세요." class="comment-box-span"></textarea>
                             </button>
                         </div>
                         <!--  -->
