--- a/src/main/resources/templates/community/review-board.html
+++ b/src/main/resources/templates/community/review-board.html
@@ -7,6 +7,7 @@
     <title>심봉사 | 활동 후기 게시판</title>
     <link rel="stylesheet" href="../../static/css/font/font.css">
     <link rel="stylesheet" href="../../static/css/community/review-board.css">
+    <link rel="stylesheet" href="../../static/css/community/free-board.css">
     <link rel="stylesheet" href="../../static/css/main/header.css">
     <link rel="stylesheet" href="../../static/css/main/footer.css">
 </head>
@@ -98,11 +99,16 @@
                         </label>
                     </div>
                 </div>
+                <div>
+                    <div class="items-buttons">
+                        <a class="button">작성하기</a>
+                    </div>
+                </div>
             </div>
             <div>
                 <ul class="contant">
                     <!--  -->
-                    <li class="contant-list-container">
+                    <li class="contant-list-container" style="margin-top: 10px">
                         <div>
                             <button class="contant-btn">
                                 <div class="contant-title-container">
