--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -81,7 +81,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="main-first-wrapper">
+                            <div class="main-first-wrapper sbs">
                                 <div class="main-first-list-title">봉사 추천</div>
                                 <div class="main-first-list-wrapper">
                                     <div class="main-first-list-layout">
@@ -660,13 +660,21 @@
                         </div>
                     </div>
                     <div class="main-content-wrap">
-                        <div class="picture-data">
-                            <picture>
-                                <source media="(max-width: 767px)" srcset="https://tumblbug-assets.imgix.net/main_banners/pc_images/000/000/008/original/7c79ddf9-2d76-4b68-b314-a1bce150ce6f.png?q=50 1x, https://tumblbug-assets.imgix.net/main_banners/pc_images/000/000/008/original/7c79ddf9-2d76-4b68-b314-a1bce150ce6f.png?q=50 2x">
-                                <source media="(min-width: 768px)" srcset="https://tumblbug-assets.imgix.net/main_banners/pc_images/000/000/008/original/7c79ddf9-2d76-4b68-b314-a1bce150ce6f.png?q=50">
-                                <img class="m-img" src="https://tumblbug-assets.imgix.net/main_banners/pc_images/000/000/008/original/7c79ddf9-2d76-4b68-b314-a1bce150ce6f.png?q=50">
-                                <img class="pc-img" src="https://tumblbug-assets.imgix.net/main_banners/pc_images/000/000/008/original/7c79ddf9-2d76-4b68-b314-a1bce150ce6f.png?q=50">
-                            </picture>
+                        <div class="content-banner-wrap">
+                            <div class="picture-data">
+                                <picture>
+                                    <!-- <source media="(max-width: 767px)" srcset="https://tumblbug-assets.imgix.net/main_banners/pc_images/000/000/008/original/7c79ddf9-2d76-4b68-b314-a1bce150ce6f.png?q=50 1x, https://tumblbug-assets.imgix.net/main_banners/pc_images/000/000/008/original/7c79ddf9-2d76-4b68-b314-a1bce150ce6f.png?q=50 2x">
+                                    <source media="(min-width: 768px)" srcset="https://tumblbug-assets.imgix.net/main_banners/pc_images/000/000/008/original/7c79ddf9-2d76-4b68-b314-a1bce150ce6f.png?q=50"> -->
+                                    <img class="m-img" src="https://tumblbug-assets.imgix.net/main_banners/pc_images/000/000/008/original/7c79ddf9-2d76-4b68-b314-a1bce150ce6f.png?q=50">
+                                    <img class="pc-img" src="https://tumblbug-assets.imgix.net/main_banners/pc_images/000/000/008/original/7c79ddf9-2d76-4b68-b314-a1bce150ce6f.png?q=50">
+                                </picture>
+                            </div>
+                        </div>
+                        <div class="main-content-section main-content-style-container">
+                            <div class="main-content-section-wrapper sbs">
+                                <div class="main-content-list-title"></div> <!-- ffNJag -->
+                                <div class="main-content-list-wrapper"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="main-bottom-banner"></div>
