--- a/src/main/resources/static/css/main/main.css
+++ b/src/main/resources/static/css/main/main.css
@@ -177,6 +177,10 @@ b, strong {
 
 .main-first-wrapper{
     position: relative;
+}
+
+.sbs{
+    position: relative;
     font-family: 'SF Pro Text', 'Helvetica Neue', 'Segoe UI', Arial, 'NotoSansKR', sans-serif;
     font-size: 14px;
     line-height: 24px;
@@ -694,7 +698,7 @@ b, strong {
     padding: 0px;
 }
 
-.main-content-wrap{
+.content-banner-wrap{
     margin: 40px auto;
     max-width: 1080px;
 }
@@ -714,6 +718,58 @@ b, strong {
     vertical-align: top;
     width: 100%;
     height: 100%;
+}
+
+.main-content-section{
+    padding-top: 20px;
+    margin-bottom: 40px;
+    position: relative;
+}
+
+.main-content-style-container{
+    width: 100%;
+}
+
+.main-content-style-container::before {
+    display: block;
+    content: "";
+    width: calc(100% - 32px);
+    height: 1px;
+    background: rgb(240, 240, 240);
+    position: absolute;
+    top: 0px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+
+.main-content-section-wrapper{
+    position: relative;
+}
+
+.main-content-list-title{
+    display: flex;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    align-items: center;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: -0.02em;
+    color: rgb(28, 28, 28);
+    font-weight: bold;
+    margin: 0px 0px 16px;
+    padding: 0px 16px;
+    position: relative;
+}
+
+.main-content-list-wrapper{
+    width: 100%;
+}
+
+@media (max-width: 768px) {
+    .picture-data img.pc-img{
+        display: none;
+    }
 }
 
 @media (min-width: 640px) {
@@ -794,8 +850,17 @@ b, strong {
         display: none;
     }
 
-    .picture-data img.pc-img{
-        display: none;
+    .main-content-section{
+        padding: 24px 20px 0px;
+        margin-bottom: 60px;    
+    }
+
+    .main-content-list-title{
+        padding: 0px;
+        margin: 0px 0px 20px;
+        font-size: 20px;
+        line-height: 29px;
+        letter-spacing: -0.025em;    
     }
 }
 
@@ -814,6 +879,10 @@ b, strong {
         font-size: 14px;
         line-height: 24px;
         letter-spacing: -0.015em;    
+    }
+
+    .main-content-list-wrapper{
+        padding: 0px;
     }
 }
 
@@ -955,6 +1024,20 @@ b, strong {
         width: 100%;
         padding: 0px 7px;
     }
+
+    .main-content-section{
+        padding: 24px 0px 0px;
+    }
+
+    .main-content-style-container{
+        max-width: 1080px;
+        margin: 0px auto;
+    }
+
+    .main-content-style-container::before {
+        width: 100%;
+        max-width: 1080px;
+    }
 }
 
 @media (min-width: 1200px) {
@@ -986,8 +1069,21 @@ b, strong {
         width: 108px;
     }
 
-    .main-content-wrap{
+    .content-banner-wrap{
         max-width: 1160px;
         margin: 52px auto;
+    }
+
+    .main-content-style-container{
+        max-width: 1160px;
+    }
+
+    .main-content-style-container::before {
+        max-width: 1160px;
+    }
+    
+    .main-content-section-wrapper{
+        width: 1160px;
+        max-width: 1160px;
     }
 }
